Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/hi/messages.json
+++ b/platform/mv3/extension/_locales/hi/messages.json
@@ -32,7 +32,7 @@
     "description": "Label in the popup panel for the current filtering mode"
   },
   "popupTipReport": {
-    "message": "Report an issue on this website",
+    "message": "इस वेबसाइट पर किसी समस्या को रिपोर्ट करें",
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipDashboard": {
