--- a/platform/mv3/extension/_locales/sq/messages.json
+++ b/platform/mv3/extension/_locales/sq/messages.json
@@ -108,7 +108,7 @@
     "description": "Header of 'Report a filter issue' section in Support pane"
   },
   "supportS3P1": {
-    "message": "Raportoni problemet me filtrat në uebsajt specifikë në <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code> issue tracker</span>. <u>Kërkon një llogari GitHub.</u>",
+    "message": "Problemet e disa faqeve me filtrat duhen raportuar në ditarin e problemeve <span data-url=\"https://github.com/uBlockOrigin/uAssets/issues?q=is%3Aissue\"><code>uBlockOrigin/uAssets</code></span>. <u>Duhet një konto GitHub.</u>",
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
   "supportS6P1S1": {
@@ -124,7 +124,7 @@
     "description": "Label for the URL of the page"
   },
   "supportS6Select1": {
-    "message": "Uebsajti...",
+    "message": "Uebsajti…",
     "description": "Label for widget to select type of issue"
   },
   "supportS6Select1Option0": {
@@ -144,11 +144,11 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option4": {
-    "message": "Ka probleme me privatësinë",
+    "message": "Ka probleme me ruajtjen e privatësisë",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option5": {
-    "message": "Krijon mosfunksionime kur uBO Lite është i aktivizuar",
+    "message": "Punon keq kur uBO Lite është i aktivizuar",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option6": {
@@ -156,7 +156,7 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option7": {
-    "message": "Çon në instalimin e programeve keqdashëse, mashtruese",
+    "message": "Çon te programet keqdashëse, mashtruese",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Checkbox1": {
