Import translation work from https://crowdin.com/project/

--- a/platform/mv3/extension/_locales/ar/messages.json
+++ b/platform/mv3/extension/_locales/ar/messages.json
@@ -20,7 +20,7 @@
     "description": "appears as tab name in dashboard"
   },
   "aboutPageName": {
-    "message": "عن التطبيق",
+    "message": "حول البرنامج",
     "description": "appears as tab name in dashboard"
   },
   "aboutPrivacyPolicy": {
