--- a/src/_locales/pa/messages.json
+++ b/src/_locales/pa/messages.json
@@ -484,7 +484,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
-    "message": "Social widgets",
+    "message": "ਸ਼ੋਸ਼ਲ ਵਿਜੈਟ",
     "description": "Filter lists section name"
   },
   "3pGroupCookies": {
