Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -1191,6 +1191,10 @@
     "message": "계속",
     "description": "Button text to navigate to the blocked page"
   },
+  "docblockedRedirectPrompt": {
+    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "description": "Text warning about an incoming redirect"
+  },
   "cloudPush": {
     "message": "클라우드 저장소로 내보내기",
     "description": "tooltip"
