--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -1191,6 +1191,10 @@
     "message": "Continuar",
     "description": "Button text to navigate to the blocked page"
   },
+  "docblockedRedirectPrompt": {
+    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "description": "Text warning about an incoming redirect"
+  },
   "cloudPush": {
     "message": "Exportar datos a la nube",
     "description": "tooltip"
