--- a/src/_locales/bg/messages.json
+++ b/src/_locales/bg/messages.json
@@ -1192,7 +1192,7 @@
     "description": "Button text to navigate to the blocked page"
   },
   "docblockedRedirectPrompt": {
-    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "message": "Блокираната страница иска да ви пренасочи към друг сайт. Ако изберете да продължите, ще отидете директно на: {{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "cloudPush": {
