--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1192,7 +1192,7 @@
     "description": "Button text to navigate to the blocked page"
   },
   "docblockedRedirectPrompt": {
-    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "message": "Die blockierte Seite möchte zu einer anderen Website weiterleiten. Wenn Sie fortfahren, wird folgende Seite aufgerufen: {{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "cloudPush": {
