--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -1192,7 +1192,7 @@
     "description": "Button text to navigate to the blocked page"
   },
   "docblockedRedirectPrompt": {
-    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "message": "A página bloqueada pretende redirecionar para outro site. Se optar por continuar, navegará diretamente para: {{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "cloudPush": {
