--- a/platform/mv3/extension/_locales/ca/messages.json
+++ b/platform/mv3/extension/_locales/ca/messages.json
@@ -230,5 +230,9 @@
   "showBlockedCountLabel": {
     "message": "Mostra el nombre de sol·licituds blocades a la icona de la barra d'eines",
     "description": "Label for a checkbox in the options page"
+  },
+  "findListsPlaceholder": {
+    "message": "Find lists",
+    "description": "Placeholder for the input field used to find lists"
   }
 }
