--- a/platform/mv3/extension/_locales/it/messages.json
+++ b/platform/mv3/extension/_locales/it/messages.json
@@ -230,5 +230,9 @@
   "showBlockedCountLabel": {
     "message": "Mostra il numero delle richieste bloccate sull'icona nella barra degli strumenti",
     "description": "Label for a checkbox in the options page"
+  },
+  "findListsPlaceholder": {
+    "message": "Find lists",
+    "description": "Placeholder for the input field used to find lists"
   }
 }
