--- a/platform/mv3/extension/_locales/pt_BR/messages.json
+++ b/platform/mv3/extension/_locales/pt_BR/messages.json
@@ -230,5 +230,9 @@
   "showBlockedCountLabel": {
     "message": "Mostrar o número de requisições bloqueadas no ícone da barra de ferramentas",
     "description": "Label for a checkbox in the options page"
+  },
+  "findListsPlaceholder": {
+    "message": "Find lists",
+    "description": "Placeholder for the input field used to find lists"
   }
 }
